Uploaded image for project: 'Log4cxx'
  1. Log4cxx
  2. LOGCXX-394

Levels are not thread safe

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • None
    • None
    • Appender
    • Windows 7, Visual Studio 2010 SP1

    Description

      Level.cpp. All default level variables are function static. This is not thread safe, especially in Visual C++ compiler.

      Here is code to reproduce the issue in VC++ 2010:

      Concurrency::parallel_for (int(0), int(10), [&](int i)
      {
      if (::log4cxx::Level::getWarn() == NULL)

      { throw std::exception(); }

      });

      Attachments

        Issue Links

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            tschoening Thorsten Schöning
            petro Petro Protsyk
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment